--- a/project-create.xhtml
+++ b/project-create.xhtml
@@ -22,98 +22,83 @@
 	</script>
 </head>
 <body>
-    <h1>New Deployment</h1>
-	<form typeof="foaf:Project"
-            method="POST" action="" enctype="application/rdf+xml"
-            onsubmit="return calli.saveResourceAs(event, calli.slugify($('#label').val()))">
-		<div class="hbox">
-			<fieldset>
-				<div class="control-group">
-					<label for="label" class="control-label">Deployment name</label>
-                    <div class="controls">
-					    <input type="text" id="label" autofocus="autofocus" required="required" value="{rdfs:label}" class="auto-expand" />
-                    </div>
-				</div>
-				<div class="control-group">
-					<label for="web-page" class="control-label">Website</label>
-                    <div class="controls">
-					    <input type="url" id="web-page" placeholder="Web page with more detail" value="{foaf:homepage}" class="auto-expand" />
-                    </div>
-				</div>
-				<div class="control-group">
-					<label for="country" class="control-label">Country of Origin</label>
-                    <div class="controls">
-    					<select id="country" rel="directory:countryOfOrigin">
-    						<option selected="selected" about="?country" rev="calli:hasComponent" resource="countries/" property="skos:prefLabel" />
-    					</select>
-                    </div>
-				</div>
-				<div class="control-group">
-					<label for="comment" class="control-label">Comment</label>
-                    <div class="controls">
-					    <textarea id="comment" class="auto-expand">{rdfs:comment}</textarea>
-                    </div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="control-group">
-					<label for="industry" class="control-label">Industry or domain category</label>
-					<div id="industry" rel="directory:inIndustry" class="sorted controls">
-						<label class="input" about="?industry" style="display:block">
-							<input type="checkbox" name="industry" checked="checked" />
-							<span rev="calli:hasComponent" resource="sector/" property="skos:prefLabel" class="asc" />
-						</label>
-					</div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="control-group">
-					<label for="technologies" class="control-label">Technologies used</label>
-					<div id="technologies" rel="directory:usedTechnology" class="sorted controls">
-						<label class="input" about="?technology" style="display:block">
-							<input type="checkbox" name="technology" checked="checked" />
-							<span rev="calli:hasComponent" resource="technologies/" property="skos:prefLabel" class="asc" />
-						</label>
-					</div>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<div class="control-group">
-					<label for="deployments" class="control-label">Availability <a href="http://lab.linkeddata.deri.ie/2010/star-scheme-by-example/" target="_blank"><sup>?</sup></a></label>
-                    <div class="controls">
-    					<select id="deployments" rel="directory:availabilityLevel">
-    						<option selected="selected" about="?deployments" rev="calli:hasComponent" resource="linked-data-category/" property="skos:prefLabel" />
-    					</select>
-                    </div>
-				</div>
-				<div id="org" class="control-group" dropzone="link s:text/uri-list"
-                        ondrop="return calli.insertResource(event)">
-					<label class="control-label">Participants <a href="./?view" title="Select" class="ui-icon ui-icon-newwin"
-                        onclick="return calli.selectResource(event)" /></label>
-					<div rel="directory:hasParticipant" class="vbox controls">
-                        <span about="?org" typeof="vcard:Organization" class="ui-state-highlight ui-corner-all">
-    						<span property="rdfs:label"></span>
-                        </span>
-					</div>
-				</div>
-            	<div dropzone="link s:text/uri-list" class="control-group"
-                        ondrop="return calli.insertResource(event)">
-        			<label class="control-label">Depiction <a href="?create=/callimachus/Image" title="Upload"
-            				onclick="return calli.createResource(event)" class="ui-icon ui-icon-newwin" /></label>
-        			<div rel="foaf:depiction" class="controls">
-                        <span about="?depiction" typeof="foaf:Image" class="ui-state-highlight ui-corner-all">
-            				<img src="{?depiction}" style="max-height:10em;max-width:10em" />
-                        </span>
-        			</div>
-        		</div>
-			</fieldset>
-		</div>
-        <div class="form-actions">
-		    <button id="create" type="submit" class="btn btn-primary">Create</button>
+    <div class="container">
+        <div class="page-header">
+            <h1>New Deployment</h1>
         </div>
-	</form>
+        <form typeof="foaf:Project" method="POST" action="" enctype="application/rdf+xml" onsubmit="return calli.saveResourceAs(event, calli.slugify($('#label').val()))">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <h4 for="label">Deployment name</h4>
+                        <input type="text" id="label" autofocus="autofocus" required="required" value="{rdfs:label}" class="auto-expand form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="web-page">Website</h4>
+                        <input type="url" id="web-page" placeholder="Web page with more detail" value="{foaf:homepage}" class="auto-expand form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="country">Country of Origin</h4>
+                        <select id="country" rel="directory:countryOfOrigin" class="form-control">
+                            <option selected="selected" about="?country" rev="calli:hasComponent" resource="countries/" property="skos:prefLabel" />
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <h4 for="comment">Comment</h4>
+                        <textarea id="comment" class="auto-expand form-control">{rdfs:comment}</textarea>
+                    </div>
+                    <div class="form-group">
+                        <h4 for="deployments">
+                            Availability <a href="http://lab.linkeddata.deri.ie/2010/star-scheme-by-example/" target="_blank"><sup>?</sup></a>
+                        </h4>
+                        <select id="deployments" rel="directory:availabilityLevel">
+                            <option selected="selected" about="?deployments" rev="calli:hasComponent" resource="linked-data-category/" property="skos:prefLabel" />
+                        </select>
+                    </div>
+                    <div id="org" class="form-group" dropzone="link s:text/uri-list" ondrop="return calli.insertResource(event)">
+                        <h4>Participants <a href="./?view" title="Select" onclick="return calli.selectResource(event)"><span class="glyphicon glyphicon-plus" /></a></h4>
+                        <div rel="directory:hasParticipant">
+                            <span about="?org" typeof="vcard:Organization" class="label label-warning">
+                                <span property="rdfs:label"></span>
+                            </span>
+                        </div>
+                    </div>
+                    <div dropzone="link s:text/uri-list" class="form-group" ondrop="return calli.insertResource(event)">
+                        <h4>Depiction <a href="?create=/callimachus/Image" title="Upload" onclick="return calli.createResource(event)"><span class="glyphicon glyphicon-plus" /></a></h4>
+                        <div rel="foaf:depiction">
+                            <span about="?depiction" typeof="foaf:Image" class="label label-warning">
+                                <img src="{?depiction}" />
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <h4 for="industry">Industry or domain category</h4>
+                        <div id="industry" rel="directory:inIndustry" class="sorted">
+                            <label class="input" about="?industry" style="display:block">
+                                <input type="checkbox" name="industry" checked="checked" />
+                                <span rev="calli:hasComponent" resource="sector/" property="skos:prefLabel" class="asc" />
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <h4 for="technologies">Technologies used</h4>
+                        <div id="technologies" rel="directory:usedTechnology" class="sorted">
+                            <label class="input" about="?technology" style="display:block">
+                                <input type="checkbox" name="technology" checked="checked" />
+                                <span rev="calli:hasComponent" resource="technologies/" property="skos:prefLabel" class="asc" />
+                            </label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 form-group">
+                        <button id="create" type="submit" class="btn btn-primary">Create</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
