--- a/service-edit.xhtml
+++ b/service-edit.xhtml
@@ -15,40 +15,56 @@
 	<title resource="?this">{rdfs:label}</title>
 </head>
 <body resource="?this">
-    <h1 property="gr:description" />
-	<form resource="?this" typeof="gr:ProductOrServiceModel" method="POST" enctype="application/sparql-update">
-		<div class="control-group">
-			<label for="label" class="control-label">Label</label>
-            <div class="controls">
-			    <input type="text" id="label" required="required" value="{rdfs:label}" />
-            </div>
-		</div>
-		<div class="control-group">
-			<label for="web-page" class="control-label">Web page</label>
-            <div class="controls">
-			    <input type="url" id="web-page" placeholder="Web page with more detail" value="{foaf:page}" />
-            </div>
-		</div>
-    	<div class="control-group" dropzone="link s:text/uri-list" ondrop="return calli.insertResource(event)">
-			<label class="control-label">Depiction <a href="{gr:hasManufacturer}?create=/callimachus/Image" title="Upload"
-    				onclick="return calli.createResource(event)" class="ui-icon ui-icon-newwin" /></label>
-			<div rel="foaf:depiction" class="controls">
-                <span resource="?depiction" typeof="foaf:Image" class="ui-state-highlight ui-corner-all">
-    				<img src="{?depiction}" style="max-height:10em;max-width:10em" />
-                </span>
-			</div>
-		</div>
-		<div class="control-group">
-			<label for="comment" class="control-label">Comment</label>
-            <div class="controls">
-			    <textarea id="comment" class="auto-expand">{rdfs:comment}</textarea>
-            </div>
-		</div>
-        <div class="form-actions">
-    		<button id="save" type="submit" class="btn btn-primary">Save</button>
-    		<button id="cancel" type="button" onclick="location.replace('?view')" class="btn">Cancel</button>
-    		<button id="delete" type="button" onclick="calli.deleteResource(event, '{gr:hasManufacturer}')" class="btn btn-danger">Delete</button>
+    <div class="container">
+        <div class="page-header">
+            <h1 property="gr:description" />
         </div>
-	</form>
+        <form resource="?this" typeof="gr:ProductOrServiceModel" method="POST" enctype="application/sparql-update">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <h4 for="label">Label</h4>
+                        <input type="text" id="label" autofocus="autofocus" required="required" value="{rdfs:label}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <h4 for="web-page">Web page</h4>
+                        <input type="url" id="web-page" placeholder="Web page with more detail" value="{foaf:page}" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <div id="org" dropzone="link s:text/uri-list" ondrop="return calli.insertResource(event)">
+                            <h4>Offered by</h4>
+                            <div rel="gr:hasManufacturer" class="vbox controls">
+                            	<span about="?org" typeof="vcard:Organization" class="label label-warning">
+                					<span property="vcard:organization-name" />
+                					<span property="vcard:organization-unit" />
+                				</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <h4 for="comment" class="control-label">Comment</h4>
+                        <textarea id="comment" class="auto-expand form-control">{rdfs:comment}</textarea>
+                    </div>
+                    <div class="form-group" dropzone="link s:text/uri-list" ondrop="return calli.insertResource(event)">
+                		<h4>Depiction <a href="?create=/callimachus/Image" title="Upload" onclick="return calli.createResource(event)"><span class="glyphicon glyphicon-plus" /></a></h4>
+            			<div rel="foaf:depiction">
+                            <span resource="?depiction" typeof="foaf:Image" class="label label-warning">
+                				<img src="{?depiction}" />
+                            </span>
+            			</div>
+            		</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 form-group">
+                    <button id="save" type="submit" class="btn btn-primary">Save</button>
+        	        <button id="cancel" type="button" onclick="location.replace('?view')" class="btn">Cancel</button>
+    		        <button id="delete" type="button" onclick="calli.deleteResource(event, '{gr:hasManufacturer}')" class="btn btn-danger">Delete</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
